full/css/main.css
center, div, font, form, h1, h2, h3, h4, h5, h6, hr, img, label, li, ol, p, span, table, tr, u, ul {
  margin: 0; padding: 0; border: 0; background: transparent;
}
html[dark] {background-color: #181818 !important;}
html {background-color: #f9f9f9 !important;}
html {
  font-size: 10px;
  font-family: Roboto, Arial, sans-serif;
  scrollbar-color: rgb(170, 170, 170) rgba(0, 0, 0, 0)
}
html, body {
  min-height: 400px;
}
body, input, button {
  font-size: 14px;
  font-family: Roboto, Arial, sans-serif;
  color: #bdc1c5;
}
body {
  padding: 0;
  margin: 0;
  overflow-y: scroll;
}
a {
  color: #8ab4f8;
  text-decoration: none;
}
a:hover {
  text-decoration: underline;
}

.content {
  display: flex;
  flex-direction: column;
  height: 100%
}
.flex {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-between;
}
.flex-fixed {
  flex-shrink: 0;
  box-sizing: border-box;
}

#container.header {
  background-color: rgba(34, 34, 34, 0.9);
  padding: 0 16px;
  height: 40px;
  align-items: center;
  display: flex;
  flex-direction: row;
  justify-content: space-between;
}
#container.header div {
  height: 100%;
  width: 285px;
  display: inline-flex;
}
#start.header, #end.header , #center.header{
  display: flex;
  flex-direction: row;
}
#start.header {
  align-items: center
}

#buttons.start a {
  margin: auto;
  padding: 8px 10px;
  border: 1px solid rgba(100, 100, 100, 0.1);
}
#buttons.end a {
  margin: auto;
  padding: 8px 30px;
  border: 1px solid rgba(100, 100, 100, 0.1);
}
a.hdcont {
  color: #e8eaed;
}

#center.header {
  align-items: center;
  flex: 0 1 568px;
  min-width: 0px;
}
searchbox[desktop-sbox-icon] #container.searchbox {margin: 0 0 0 40px;}
searchbox[desktop-sbox-icon] #container.searchbox > [slot="search-input"] input {
  box-sizing: border-box;
  padding: 1px 0;
  margin: 0;
}
searchbox[system-icons] #search-icon.searchbox icon.searchbox {
  width: 18px;
  height: 18px;
  color: #fff
}
searchbox.header {
  margin: 0 0 0 24px;
  padding: 0 4px;
  flex: 1;
  flex-basis: 0.000000001px;
}
searchbox {display: flex; height: 30px;}
#search-form.searchbox {
  margin: 0px 0;
  height: 28px;
  position: relative;
  flex: 1;
  flex-basis: 0.000000001px;
  display: flex;
  flex-direction: row;
}
#container.searchbox {
  position: relative;
  align-items: center;
  background-color: rgb(18, 18, 18);
  border: 1px solid rgb(48, 48, 48);
  border-right: none;
  border-radius: 8px 0 0 8px;
  box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0);
  color: rgba(255, 255, 255, 0.88);
  padding: 0 6px;
  flex: 1;
  flex-basis: 0.000000001px;
  display: flex;
  flex-direction: row;
}
#container.searchbox > [slot="search-input"] {width: 100%;}
.slib_a {
  background: transparent;
  width: 100%;
  flex:1;
  vertical-align: top;
  -moz-box-sizing: border-box;
}
.slib_b {
  padding: 0;
  -moz-boz-sizing: border-box;
  height: 100%;
  overflow: hidden;
  padding: 3px 9px 0;
}
#container.searchbox input.searchbox {
  -webkit-appearance: none;
  -webkit-font-smoothing: antialiased;
  background-color: transparent;
  border: none;
  box-shadow: none;
  color: inherit;
  font-family: 'Roboto','Noto',sans-serif;
  font-size: 16px;
  font-weight: 400;
  line-height: 24px;
  margin-left: 4px;
  max-width: 100%;
  outline: none;
  text-align: inherit;
  width: 100%;
  flex: 1;
  flex-basis: 0.000000001px;
}
#search-icon.searchbox {
  border: 1px solid rgba(255, 255, 255, 0.08);
  background-color: rgba(255, 255, 255, 0.08);
  border-radius: 0 8px 8px 0;
  cursor: pointer;
  height: 30px;
  width: 64px;
  margin: 0px 0;
}
#search-icon.searchbox icon.searchbox {
  width: 24px;
  height: 24px;
  color: #fff;
  opacity: 1;
}
icon {
  display: inline-flex;
  align-items: center;
  justify-content: center;
  position: relative;
  vertical-align: middle;
  fill: #fff;
  stroke: none;
  margin: 0;
}


.footer {
  background: #121212;
}
#footalt1.footer {
  padding: 15px 30px;
  border-bottom: 1px solid #212327;
  font-size: 15px;
  color: #9aa0a6;
}
#footmain.footer {
  padding: 0 20px;
}
a.ftcont {
  color: #999da2;
}
.ftcont {
  display: block;
  padding: 15px;
  white-space: nowrap;
}

